fix(mg-st): fix spacing and alignment (#757)
* fix(media-gallery): remove bottom margin

* fix(st): add aspect ratio to match overlay and video

--- a/eds/blocks/storyteller/storyteller.css
+++ b/eds/blocks/storyteller/storyteller.css
@@ -115,6 +115,7 @@
     }
 
     .foreground {
+      aspect-ratio: 4 / 5;
       overflow: hidden;
       position: relative;
       z-index: 2;
